[gd_scene load_steps=21 format=3 uid="uid://u1piki8metm7"]

[ext_resource type="Script" uid="uid://dup3br6bcwsec" path="res://Scripts/limmi_without_ball.gd" id="1_qppbo"]
[ext_resource type="Texture2D" uid="uid://1kts7j71b3p2" path="res://Sprites/limmi/limmi-without-ball/left1.png" id="2_te37j"]
[ext_resource type="Texture2D" uid="uid://bcpgaadrjg65b" path="res://Sprites/limmi/limmi-without-ball/left2.png" id="3_yoo01"]
[ext_resource type="Texture2D" uid="uid://blgffaegqmady" path="res://Sprites/limmi/limmi-without-ball/right1.png" id="4_owvit"]
[ext_resource type="Texture2D" uid="uid://dvlaim68xjjo2" path="res://Sprites/limmi/limmi-without-ball/right2.png" id="5_gkseq"]
[ext_resource type="Script" uid="uid://4mgbf2u1mhep" path="res://Scripts/limmi-HP.gd" id="6_7k6pd"]
[ext_resource type="Texture2D" uid="uid://baty8revcoyim" path="res://Sprites/damage-spritesheet.png" id="7_28e0r"]
[ext_resource type="AudioStream" uid="uid://b75h12dj7lowv" path="res://Audio/limmi-attack/bite-potato-chips-83946 (mp3cut.net).mp3" id="8_2e5c5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jer1i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_te37j")
}, {
"duration": 1.0,
"texture": ExtResource("3_yoo01")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_owvit")
}, {
"duration": 1.0,
"texture": ExtResource("5_gkseq")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0skjm"]
size = Vector2(60, 54.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_60so6"]
size = Vector2(66, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_11gg7"]
atlas = ExtResource("7_28e0r")
region = Rect2(0, 0, 276, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpa8y"]
atlas = ExtResource("7_28e0r")
region = Rect2(276, 0, 276, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbwqj"]
atlas = ExtResource("7_28e0r")
region = Rect2(552, 0, 276, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwi16"]
atlas = ExtResource("7_28e0r")
region = Rect2(828, 0, 276, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqm"]
atlas = ExtResource("7_28e0r")
region = Rect2(1104, 0, 276, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph33w"]
atlas = ExtResource("7_28e0r")
region = Rect2(1380, 0, 276, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ldla"]
atlas = ExtResource("7_28e0r")
region = Rect2(1656, 0, 276, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7t2e"]
atlas = ExtResource("7_28e0r")
region = Rect2(1932, 0, 276, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_lylfo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11gg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpa8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbwqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwi16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph33w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ldla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7t2e")
}],
"loop": false,
"name": &"default",
"speed": 70.0
}]

[node name="limmi_without_ball" type="CharacterBody2D" groups=["Enemy", "enemy-of-level", "limmi"]]
z_index = 1
script = ExtResource("1_qppbo")

[node name="limmi" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jer1i")
animation = &"right"

[node name="limmi_body" type="CollisionShape2D" parent="."]
position = Vector2(-6, -20.75)
shape = SubResource("RectangleShape2D_0skjm")

[node name="Collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2(-6, -21)
scale = Vector2(1.22, 1.22)
shape = SubResource("RectangleShape2D_60so6")

[node name="HP" type="RichTextLabel" parent="."]
z_index = 2
offset_left = -74.0
offset_top = -89.0
offset_right = 146.0
offset_bottom = -28.0
scale = Vector2(0.667, 0.667)
theme_override_colors/default_color = Color(0.999331, 0.336299, 0.271501, 1)
bbcode_enabled = true
horizontal_alignment = 1
script = ExtResource("6_7k6pd")

[node name="damaged" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(0, 0.6, 0.411765, 1)
position = Vector2(-10, -18)
scale = Vector2(0.547101, 0.546875)
sprite_frames = SubResource("SpriteFrames_lylfo")
frame = 7
frame_progress = 1.0

[node name="chomp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_2e5c5")
volume_db = 15.0

[connection signal="send_health" from="." to="HP" method="_on_limmi_send_health"]
[connection signal="body_entered" from="Collision" to="." method="_on_collision_body_entered"]
[connection signal="body_exited" from="Collision" to="." method="_on_collision_body_exited"]
